--- a/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/graphql/__default__/__default__.service.ts.j2
@@ -9,7 +9,7 @@ export class {{ casing.pascal }}Service {
 
   constructor () {}
 
-  public async default (args: {{ casing.pascal }}Input): Promise<{{ casing.pascal }}Output> {
+  async default (args: {{ casing.pascal }}Input): Promise<{{ casing.pascal }}Output> {
     return { response: `Hello ${args?.name}.` }
   }
 }
