--- a/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
@@ -6,7 +6,7 @@ export class {{ casing.pascal }}Service {
 
   constructor () {}
 
-  public async default (): Promise<string> {
+  async default (): Promise<string> {
     return 'Hello World!'
   }
 }
