--- a/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/microservice-server/__default__/__default__.service.ts.j2
@@ -7,7 +7,7 @@ export class {{ casing.pascal }}Microservice {
 
   constructor() {}
 
-  public async default (
+  async default (
     options: MicroserviceRequest<MessageQueues.{{ casing.injected.microservices.names.queue }}, {{ casing.injected.microservices.names.pattern }}.{{ casing.injected.microservices.names.default }}>
   ): Promise<MicroserviceResponse<MessageQueues.{{ casing.injected.microservices.names.queue }}, {{ casing.injected.microservices.names.pattern }}.{{ casing.injected.microservices.names.default }}>> {
     return 'Hello world.'
