perf: swap the build system because of 24gb ram usage xd
BREAKING CHANGE: drops anything less than node16, strictly commonjs still, transpiled to es2021

--- a/packages/nx-nest/src/schematics/application/files/src/server/init.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/init.ts.j2
@@ -3,7 +3,7 @@ import type { NestFastifyApplication } from '@nestjs/platform-fastify'
 import { FastifyAdapter } from '@nestjs/platform-fastify'
 
 import { createServerModule } from './server.module'
-import { LoggerService, SwaggerService, ConfigService } from '@webundsoehne/nestjs-util'
+import { LoggerService, ConfigService } from '@webundsoehne/nestjs-util'
 {% if server == enum.server.RESTFUL %}
 import { SwaggerService } from '@webundsoehne/nestjs-util-restful'
 {% endif %}
