feat: add more decorators for missing scheduler features

--- a/packages/nx-nest/src/schematics/component/files/bgtask/__default__/__default__.task.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/bgtask/__default__/__default__.task.ts.j2
@@ -1,5 +1,5 @@
 import { Injectable, Logger } from '@nestjs/common'
-import { Timeout } from '@nestjs/schedule'
+import { Interval } from '@nestjs/schedule'
 
 /**
  * Register your bgtask in this component.
