fix: update db address

--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -38,7 +38,7 @@ database:
   type: mysql
   port: 3306
 {% elif database == enum.database.TYPEORM_POSTGRESQL %}
-  host: db-postgres
+  host: db-postgresql
   type: postgres
   port: 5432
 {% endif %}
