--- a/packages/nx-workspace/src/schematics/workspace/files/.gitignore.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/.gitignore.j2
@@ -80,11 +80,11 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+/.env
+/.env.development.local
+/.env.test.local
+/.env.production.local
+/.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -174,3 +174,6 @@ Thumbs.db
 
 # nx templating engine ignores
 **/*.old
+
+# docker volumes for nx
+/volumes
