fix: problem with import plugin to use the nx tsconfig

--- a/packages/nx-workspace/src/schematics/workspace/files/.eslintrc-backend.js.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/.eslintrc-backend.js.j2
@@ -4,6 +4,6 @@ module.exports = {
   extends: [ '@webundsoehne/eslint-config/typescript-dynamic' ],
   rules: {},
   overrides: [
-    ...require('@webundsoehne/eslint-config/utils').generateImportGroupsWithOverride({ tsconfigDir: __dirname })
+    ...require('@webundsoehne/eslint-config/utils').generateImportGroupsWithOverride({ tsconfigDir: __dirname, tsconfig: 'tsconfig.base.json' })
   ]
 }
