feat: use npx or yarn exec like paths instead of hardcoding for windows

--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -14,10 +14,10 @@
     "test": "nx run-many --target test --parallel 10 --all",
     "test:one": "nx test",
     "test:e2e": "nx run-many --target test:e2e --parallel 10 --all",
-    "test:e2e:one": "nx test:e2e",
+    "test:e2e:one": "nx test -c e2e",
     "test:cov": "nx run-many --target test:cov --parallel 10 --all",
-    "test:cov:one": "nx test:cov",
-    "test:dev:dev": "nx test:dev",
+    "test:cov:one": "nx test -c cov",
+    "test:dev:one": "nx test -c dev",
     "e2e": "nx run-many --target e2e --parallel 10 --all",
     "e2e:one": "nx e2e",
     "lint": "nx format:write --all && nx workspace-lint && npm run lint:check -- --fix",
@@ -33,17 +33,17 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "clean": "rimraf dist/ .cache/ node_modules/ yarn.lock yarn-error.log package-lock.json",
-    "backend:command:one": "npm run nx -- command",
-    "backend:seed": "npm run nx -- run-many --target seed --parallel --all",
-    "backend:seed:one": "npm run nx -- seed",
-    "backend:migrate": "npm run nx -- run-many --target migration --parallel --all",
-    "backend:migrate:one": "npm run nx -- migration",
-    "backend:migrate:mock": "npm run nx -- run-many --target migration:mock-run --parallel --all",
-    "backend:migrate:mock:one": "npm run nx -- migration:mock-run",
-    "backend:migrate:rollback": "npm run nx -- run-many --target migration:rollback --parallel --all",
-    "backend:migrate:rollback:one": "npm run nx -- migration:rollback",
-    "backend:migrations:create:one": "npm run nx -- migration:create",
-    "backend:migrations:generate:one": "npm run nx -- migration:generate"
+    "backend:command:one": "nx command",
+    "backend:seed": "nx run-many --target seed --parallel --all",
+    "backend:seed:one": "nx seed",
+    "backend:migrate": "nx run-many --target migration --parallel --all",
+    "backend:migrate:one": "nx migration",
+    "backend:migrate:mock": "nx run-many --target migration:mock-run --parallel --all",
+    "backend:migrate:mock:one": "nx migration -c mock-run",
+    "backend:migrate:rollback": "nx run-many --target migration:rollback --parallel --all",
+    "backend:migrate:rollback:one": "nx migration -c rollback",
+    "backend:migrations:create:one": "nx migration -c create",
+    "backend:migrations:generate:one": "nx migration -c generate"
   },
   "simple-git-hooks": {
     "pre-commit": "npm exec lint-staged"
