--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -36,8 +36,8 @@
     "backend:command:one": "nx command",
     "backend:seed": "nx run-many --target seed --parallel --all",
     "backend:seed:one": "nx seed",
-    "backend:migrate": "nx run-many --target migration --parallel --all",
-    "backend:migrate:one": "nx migration",
+    "backend:migrate": "nx run-many --target migration:run --parallel --all",
+    "backend:migrate:one": "nx migration -c run",
     "backend:migrate:mock": "nx run-many --target migration:mock-run --parallel --all",
     "backend:migrate:mock:one": "nx migration -c mock-run",
     "backend:migrate:rollback": "nx run-many --target migration:rollback --parallel --all",
