fix: more target based strings

--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -13,9 +13,9 @@
     "build:nocache": "npm run build -- --skip-nx-cache",
     "test": "nx run-many --target test --parallel 10 --all",
     "test:one": "nx test",
-    "test:e2e": "nx run-many --target test:e2e --parallel 10 --all",
+    "test:e2e": "nx run-many --target test -c e2e --parallel 10 --all",
     "test:e2e:one": "nx test -c e2e",
-    "test:cov": "nx run-many --target test:cov --parallel 10 --all",
+    "test:cov": "nx run-many --target test -c cov --parallel 10 --all",
     "test:cov:one": "nx test -c cov",
     "test:dev:one": "nx test -c dev",
     "e2e": "nx run-many --target e2e --parallel 10 --all",
