--- a/packages/nx-workspace/src/schematics/workspace/files/README.md.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/README.md.j2
@@ -101,6 +101,9 @@ Testing actions of normal `testing`, `coverage`, `watch` mode and `e2e` is acces
 
 # to change the debug port
 ./cli npm run test:dev -- ${PACKAGE} --debug-port 9300
+
+# for running the e2e tests in dev mode
+./cli npm run test:dev:e2e -- ${PACKAGE}
 ```
 
 ### `@nrwl/jest` to run jest
