--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -17,7 +17,8 @@
     "test:e2e:one": "nx test -c e2e",
     "test:cov": "nx run-many --target test -c cov --parallel 10 --all",
     "test:cov:one": "nx test -c cov",
-    "test:dev:one": "nx test -c dev",
+    "test:dev": "nx test -c dev",
+    "test:dev:e2e": "nx test -c e2e-dev",
     "e2e": "nx run-many --target e2e --parallel 10 --all",
     "e2e:one": "nx e2e",
     "lint": "nx format:write --all && nx workspace-lint && npm run lint:check -- --fix",
