fix: update nx cli commands

--- a/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/package.json.j2
@@ -12,15 +12,15 @@
     "build:one": "nx build",
     "build:nocache": "npm run build -- --skip-nx-cache",
     "test": "nx run-many --target test --parallel 10 --all",
-    "test:one": "nx test",
+    "test:one": "nx test --project",
     "test:e2e": "nx run-many --target test -c e2e --parallel 10 --all",
-    "test:e2e:one": "nx test -c e2e",
+    "test:e2e:one": "nx test -c e2e --project",
+    "test:e2e-dev:one": "nx test -c e2e-dev --project",
     "test:cov": "nx run-many --target test -c cov --parallel 10 --all",
-    "test:cov:one": "nx test -c cov",
-    "test:dev": "nx test -c dev",
-    "test:dev:e2e": "nx test -c e2e-dev",
+    "test:cov:one": "nx test -c cov --project",
+    "test:dev:one": "nx test -c dev --project",
     "e2e": "nx run-many --target e2e --parallel 10 --all",
-    "e2e:one": "nx e2e",
+    "e2e:one": "nx e2e --project",
     "lint": "nx format:write --all && nx workspace-lint && npm run lint:check -- --fix",
     "lint:check": "nx run-many --parallel 10 --target lint --all --",
     "affected": "nx affected",
