--- a/packages/nx-nest/src/schematics/microservice-provider/files/src/patterns/__pattern__.constants.ts.j2
+++ b/packages/nx-nest/src/schematics/microservice-provider/files/src/patterns/__pattern__.constants.ts.j2
@@ -4,5 +4,5 @@
  * Message patterns for "{{ name }}" with pattern "{{ names.pattern }}"
  */
 export enum {{ names.pattern }} {
-  {{ names.default }} = '{{ casing.camel }}'
+  DEFAULT = 'DEFAULT'
 }
