perf: nx14 upgrade
this might break older versions due to structural changes and major dependency updates

--- a/packages/nx-workspace/src/schematics/workspace/files/nx.json.j2
+++ b/packages/nx-workspace/src/schematics/workspace/files/nx.json.j2
@@ -16,10 +16,12 @@
     "**/public/**": "*"
   },
   "tasksRunnerOptions": {
-    "runner": "@nrwl/workspace/tasks-runners/default",
-    "options": {
-      "cacheDirectory": ".cache/nx",
-      "cacheableOperations": ["build", "lint", "test", "e2e"]
+    "default": {
+      "runner": "@nrwl/workspace/tasks-runners/default",
+      "options": {
+        "cacheDirectory": ".cache/nx",
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
+      }
     }
   },
   {% if layout === enum.layout.SINGLE %}
