perf: extend templates
BREAKING CHANGE: this is not compatible with older versions of the nx-nest generator

- express/fastify is now selectable when selecting a server
- moved database stuff to backend-database from backend-interface
- extend generator to accept injecting arguments
- use the migration module for mongodb
- ditch typeorm-seeding for generic seeder
- add relevant command for seeding to nestjs itself due to dependency injection

--- a/packages/nx-nest/src/schematics/application/files/src/server/graphql-setup__graphql__.ts.j2
+++ b/packages/nx-nest/src/schematics/application/files/src/server/graphql-setup__graphql__.ts.j2
@@ -1,8 +1,13 @@
 import { GraphQLErrorParser } from '@webundsoehne/nestjs-util-graphql'
+{% if serverAdapter == enum.serverAdapter.FASTIFY %}
 import { FastifyRequest, RequestGenericInterface } from 'fastify'
+{% endif %}
+{% if serverAdapter == enum.serverAdapter.EXPRESS %}
+import { Request } from 'express'
+{% endif %}
 import { GraphQLError, GraphQLFormattedError } from 'graphql/error'
 
-export async function graphQLContextParser ({ req }: { req: FastifyRequest<RequestGenericInterface> }): Promise<FastifyRequest<RequestGenericInterface> & Record<string, any>> {
+export async function graphQLContextParser ({ req }: { req: {% if serverAdapter == enum.serverAdapter.FASTIFY %}FastifyRequest<RequestGenericInterface>{% endif %}{% if serverAdapter == enum.serverAdapter.Express %}any{% endif %} }): Promise<{% if serverAdapter == enum.serverAdapter.FASTIFY %}FastifyRequest<RequestGenericInterface>{% endif %}{% if serverAdapter == enum.serverAdapter.Express %}Request{% endif %} & Record<string, any>> {
   return { ...req }
 }
 
