--- a/packages/nx-nest/src/schematics/backend-database/files/src/database/database-mongoose__mongoose__.ts.j2
+++ b/packages/nx-nest/src/schematics/backend-database/files/src/database/database-mongoose__mongoose__.ts.j2
@@ -15,5 +15,9 @@ export function getDatabaseOptions (mock?: boolean): [string, MongooseModuleOpti
     mongoOptions.pass = password
   }
 
+  if (mongoOptions.migration) {
+    delete mongoOptions.migration
+  }
+
   return [uri, mongoOptions]
 }
