--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -52,12 +52,12 @@ database:
   directories:
 {% if enum.extensions.EXTERNAL_BACKEND_DATABASE in extensions %}
     entity: ../../libs/{{ constants.BACKEND_DATABASE_PACKAGE }}/src/entity-typeorm/**/*.entity{.ts,.js}
-    migration: migrations
-    seed: seeds
+    migration: ../../libs/{{ constants.BACKEND_DATABASE_PACKAGE }}/src/migration-typeorm
+    seed: seed
 {% else %}
     entity: ./**/*.entity{.ts,.js}
-    migration: migrations
-    seed: seeds
+    migration: migration
+    seed: seed
 {% endif %}
 {% elif enum.dbAdapters.MONGOOSE == dbAdapters %}
   host: db-mongodb
@@ -68,6 +68,11 @@ database:
   ignoreUndefined: true
   useNewUrlParser: true
   useUnifiedTopology: true
+  migration:
+    migrationsDir: ../../libs/{{ constants.BACKEND_DATABASE_PACKAGE }}/src/migration-mongoose
+    changelogCollectionName: migrations
+    migrationFileExtension: '.js'
+    useFileHash: false
 {% endif %}
 {% endif %}
 
