--- a/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
+++ b/packages/nx-nest/src/schematics/component/files/restful/__default__/__default__.service.ts.j2
@@ -2,7 +2,7 @@ import { Injectable, Logger } from '@nestjs/common'
 
 @Injectable()
 export class {{ casing.pascal }}Service {
-  private logger: Logger = new Logger(this.constructor.name)
+  private readonly logger: Logger = new Logger(this.constructor.name)
 
   constructor () {}
 
