fix: implement the bugs discussed on the telko
- fixes issue with backend database both generating mongoose and typeorm
folders
- adds missing dependency mongo-migrate
- add local configuration files to ignore
- update docker database containers to have mock databases already
- fix issue with default mongodb entity

--- a/packages/nx-nest/src/schematics/generator/files/migration-task-module/migration/migration.task.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/migration-task-module/migration/migration.task.ts.j2
@@ -51,7 +51,7 @@ export class MigrationTask {
       const migrated = await up(db, client)
 
       if (migrated.length > 0) {
-        migrated.forEach((fileName) => this.logger.verbose([ 'Migrated: %s', filename ]))
+        migrated.forEach((filename) => this.logger.verbose([ 'Migrated: %s', filename ]))
       } else {
         this.logger.verbose('No pending migration found.')
       }
