--- a/packages/nx-nest/src/schematics/generator/files/migration-task-module/migration/migration.module.ts.j2
+++ b/packages/nx-nest/src/schematics/generator/files/migration-task-module/migration/migration.module.ts.j2
@@ -1,8 +1,10 @@
 import { Module } from '@nestjs/common'
 
 import { MigrationTask } from './migration.task'
+import { MaintenanceModule } from '@webundsoehne/nestjs-util'
 
 @Module({
+  imports: [MaintenanceModule],
   providers: [MigrationTask],
   exports: [MigrationTask]
 })
