fix(nx-nest/mongodb): update migration for migrate-monngo

--- a/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
+++ b/packages/nx-nest/src/schematics/application/files/config/default.yml.j2
@@ -73,6 +73,7 @@ database:
     changelogCollectionName: migrations
     migrationFileExtension: '.js'
     useFileHash: false
+    moduleSystem: esm
 {% endif %}
 {% endif %}
 
