--- a/packages/nx-nest/src/generators/application/files/multi-application/src/main.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/multi-application/src/main.ts.ejs
@@ -6,6 +6,12 @@ import { Service } from './constants'
 <% } %>
 
 function bootstrap (): Promise<void> {
+  // eslint-disable-next-line no-console
+  console.log(
+  // eslint-disable-next-line max-len
+  `++++ ${process.env.npm_package_name} v${process.env.npm_package_version} starting on nodejs ${process.version}, environment is "${process.env.NODE_ENV}", service is "${process.env.NODE_SERVICE}" ++++`
+  )
+
   switch (String(process.env.NODE_SERVICE).toLowerCase()) {
   <% for (const metadata of applicationMetadata) { %>
     <%- metadata.applicationCase -%>
