--- a/packages/nx-nest/src/generators/workspace/files/lint-staged.config.js.ejs
+++ b/packages/nx-nest/src/generators/workspace/files/lint-staged.config.js.ejs
@@ -1,15 +1,6 @@
-const { relative, isAbsolute } = require('path')
-
 module.exports = {
-  '*': (paths) => {
-    paths = paths.map((path) => {
-      if (isAbsolute(path)) {
-        return relative(__dirname, path)
-      }
-
-      return path
-    })
-
-    return [['nx format:write --files', ...paths].join(' '), ['nx affected:lint --fix --files', ...paths].join(' ')]
-  }
+  // only fix changed files
+  '*.{js,ts}': 'eslint --fix',
+  // on eslintrc change fix the whole project (without appending files)
+  '.eslintrc.json': () => 'npm run lint'
 }
