--- a/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/config/default.yml.ejs
@@ -42,9 +42,9 @@ database: <% if (database === DATABASE.TYPEORM) { %>
   cache: false
   keepConnectionAlive: true
   directories:
-  entity: entity/**/*.entity{.ts,.js}
-  migration: migration
-  seed: seed
+    entity: entity
+    migration: migration
+    seed: seed
 <% } else if (database === DATABASE.MONGOOSE) { %>
   host: localhost
   ignoreUndefined: true
