--- a/packages/nx-nest/src/generators/database-orm/files/mongoose/src/index.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/mongoose/src/index.ts.ejs
@@ -1,4 +1,4 @@
 export * from './database/database-options'
 export * from './database/migrate-options'
-export * from './database/migration/migration.module'
+export * from './entity'
 export * from './util'
