--- a/packages/nx-nest/src/generators/application/files/command/modules/index.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/command/modules/index.ts.ejs
@@ -1,1 +1,5 @@
+<% if (database !== DATABASE.NONE) { %>
+    export * from '@<%- scope %>/database/util/seeder-command/seeder.module'
+<% } %>
+
 export * from './default/default.module'
