--- a/packages/nx-nest/src/generators/database-orm/files/typeorm/src/util/migration-ttask/migration.module.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/typeorm/src/util/migration-ttask/migration.module.ts.ejs
@@ -8,4 +8,4 @@ import { MaintenanceModule } from '@webundsoehne/nestjs-util'
   providers: [MigrationTask],
   exports: [MigrationTask]
 })
-export class MigrationModule {}
+export class MigrationTaskModule {}
