--- a/packages/nx-nest/src/generators/application/files/microservice/modules/default/default.controller.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/microservice/modules/default/default.controller.ts.ejs
@@ -2,13 +2,16 @@ import { Controller } from '@nestjs/common'
 import { MessagePattern } from '@nestjs/microservices'
 
 import { DefaultMicroservice } from './default.service'
+import { DefaultPattern, MessageQueues, MicroserviceRequest, MicroserviceResponse } from '@<%- scope %>/microservice-provider'
 
 @Controller()
 export class DefaultMicrocontroller {
   constructor (private readonly defaultMicroservice: DefaultMicroservice) {}
 
-  @MessagePattern('DEFAULT')
-  default (options: any): Promise<any> {
+  @MessagePattern(DefaultPattern.DEFAULT)
+  default (
+    options: MicroserviceRequest<MessageQueues.DEFAULT, DefaultPattern.DEFAULT>
+  ): Promise<MicroserviceResponse<MessageQueues.DEFAULT, DefaultPattern.DEFAULT>> {
     return this.defaultMicroservice.default(options)
   }
 }
