--- a/packages/nx-nest/src/generators/application/files/microservice/modules/default/default.service.ts.ejs
+++ b/packages/nx-nest/src/generators/application/files/microservice/modules/default/default.service.ts.ejs
@@ -1,12 +1,16 @@
 import { Injectable, Logger } from '@nestjs/common'
 
+import { DefaultPattern, MessageQueues, MicroserviceRequest, MicroserviceResponse } from '@<%- scope %>/microservice-provider'
+
 @Injectable()
 export class DefaultMicroservice {
   private readonly logger: Logger = new Logger(this.constructor.name)
 
   constructor() {}
 
-  async default (options: any): Promise<any> {
+  async default (
+    options: MicroserviceRequest<MessageQueues.DEFAULT, DefaultPattern.DEFAULT>
+  ): Promise<MicroserviceResponse<MessageQueues.DEFAULT, DefaultPattern.DEFAULT>> {
     return 'Hello world.'
   }
 }
