--- a/packages/nx-nest/src/generators/resource/files/microservice/modules/__fileName__/__fileName__.controller.ts.ejs
+++ b/packages/nx-nest/src/generators/resource/files/microservice/modules/__fileName__/__fileName__.controller.ts.ejs
@@ -2,13 +2,16 @@ import { Controller } from '@nestjs/common'
 import { MessagePattern } from '@nestjs/microservices'
 
 import { <%- resourceNames.className -%>Microservice } from './<%- resourceNames.fileName -%>.service'
+import { <%- projectNames.className %>Pattern, MessageQueues, MicroserviceRequest, MicroserviceResponse } from '@<%- scope %>/microservice-provider'
 
 @Controller()
 export class <%- resourceNames.className -%>Microcontroller {
   constructor (private readonly <%- resourceNames.propertyName -%>Microservice: <%- resourceNames.className -%>Microservice) {}
 
-  @MessagePattern('<%- resourceNames.constantName -%>')
-  default (options: any): Promise<any> {
+  @MessagePattern(<%- projectNames.className %>Pattern.<%- resourceNames.constantName -%>)
+  default (
+    options: MicroserviceRequest<MessageQueues.<%- projectNames.constantName %>, <%- projectNames.className %>Pattern.<%- resourceNames.constantName -%>>
+  ): Promise<MicroserviceResponse<MessageQueues.<%- projectNames.constantName %>, <%- projectNames.className %>Pattern.<%- resourceNames.constantName -%>>> {
     return this.<%- resourceNames.propertyName -%>Microservice.default(options)
   }
 }
