--- a/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
+++ b/packages/nx-nest/src/generators/database-orm/files/typeorm/src/database/database-options.ts.ejs
@@ -7,14 +7,11 @@ const { mock: mockOptions = {}, directories, ...options } = ConfigService.get('d
 
 const entitiesDir = join(__dirname, `../${directories.entity}`)
 const migrationsDir = join(__dirname, `../${directories.migration}`)
-const seedsDir = join(__dirname, `../${directories.seed}`)
 const databaseOptions: DataSourceOptions = {
   ...options,
   entities: [`${entitiesDir}/*{.ts,.js}`],
   migrations: [`${migrationsDir}/*{.ts,.js}`],
-  cli: { entitiesDir, migrationsDir },
-  seeds: [`${seedsDir}/**/*.seed{.ts,.js}`],
-  factories: [`${seedsDir}/**/*.factory{.ts,.js}`]
+  cli: { entitiesDir, migrationsDir }
 }
 
 export function getDatabaseOptions (mock = false): DataSourceOptions {
