fix(nx-nest): include db migration on build
Add migration asset to project.json and include them in the tsconfig as well.

--- a/packages/nx-nest/src/generators/application/files/base/tsconfig.build.json.ejs
+++ b/packages/nx-nest/src/generators/application/files/base/tsconfig.build.json.ejs
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {},
-  "include": ["src", "migrations", "seeds"],
+  "include": ["src"<% if (isBgTask && database !== DATABASE.NONE) {%>, "../../libs/database/src/migration"<% } %>],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
